# Cantari

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml
crates/assets/: Cargo.toml  build.rs
crates/assets/frontend/: components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/assets/frontend/src/: App.vue  main.ts  style.scss
crates/assets/frontend/src/@types/: fast-base64.d.ts
crates/assets/frontend/src/components/: OngenSettings.vue  PageFooter.vue  PageHeader.vue  PathsTable.vue
crates/assets/frontend/src/composables/: useData.ts  useSettings.ts
crates/assets/src/: lib.rs
crates/cantari/: Cargo.toml  engine_manifest.json
crates/cantari/src/: error.rs  ex_licenses.json  frq.rs  licenses.json  main.rs  math.rs  model.rs  ongen.rs  ongen_settings.rs  oto.rs  settings.rs  tempdir.rs
crates/cantari/src/routes/: audio_query.rs  info.rs  mod.rs  settings.rs  speakers.rs  synthesis.rs  user_dict.rs
crates/loquor/: Cargo.toml
crates/loquor/src/: error.rs  frq.rs  icon_manager.rs  main.rs  ongen.rs  settings.rs  test.frq
crates/loquor/src/routes/: audio_query.rs  speakers.rs  synthesis.rs  user_dict.rs
crates/tyc_utau/: .gitignore  Cargo.toml  build.rs  install.txt
crates/tyc_utau/src/: lib.rs
crates/worldline/: Cargo.toml  build.rs
crates/worldline/src/: lib.rs  phrase_synth.rs  synth_request.rs  sys.rs
crates/worldline/tests/: main_test.rs
