[package]
name = "cantari"
version = "0.0.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["json"] }
base64 = "0.21.3"
clap = { version = "4.4.2", features = ["derive"] }
once_cell = "1.18.0"
open = "5.0.0"
process_path = "0.1.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v5", "v4", "serde"] }
wav_io = "0.1.11"
dirs = "5.0.1"
worldline.workspace = true
voicevox_core = { git = "https://github.com/voicevox/voicevox_core.git", rev = "be8d0c0" }
regex = "1.10.4"
regex-macro = "0.2.0"
encoding_rs = "0.8.34"
image = "0.25.1"
assets.workspace = true
camino = "1.1.7"
duplicate = "1.0.0"
walkdir = "2.5.0"
unicode-jp = "0.4.0"
fs-err = { version = "2.11.0", features = ["tokio"] }
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
rmp-serde = "1.3.0"
async-walkdir = "1.0.0"
async-recursion = "1.1.1"
tempfile = "3.10.1"
futures = "0.3.30"
serde_with = { version = "3.8.1", features = ["base64"] }
educe = { version = "0.6.0", features = ["Debug"] }
itertools = "0.13.0"

[dev-dependencies]
cargo-license = "0.5.1"
