[package]
name = "worldline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.86"
tokio = "1.37.0"
tracing = "0.1.40"

[build-dependencies]
duct = "0.13.7"

[dev-dependencies]
wav_io = "0.1.14"
assets.workspace = true
encoding_rs = "0.8.34"
regex = "1.10.4"
regex-macro = "0.2.0"
tracing-subscriber = "0.3.18"
